# instant-ngp

./: .clang-format  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README_ESP.md  flake.nix  index.html  requirements.txt  runPython.sh  run_and_save_all.py  run_fox.sh
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose.yml  requirements.txt  requirements_dev.txt
.github/workflows/: main.yml
cmake/: FindOptiX.cmake  bin2c_wrapper.cmake
configs/image/: base.json  frequency.json  oneblob.json
configs/nerf/: base.json  base_0layer.json  base_14.json  base_1layer.json  base_2layer.json  base_3layer.json  big.json  customAll.json  customHar.json  customHashfeat.json  customHashlvl.json  customHashres.json  customHashsize.json  customLayers0.json  customLayers1.json  customNeurons0.json  customNeurons1.json  densegrid.json  densegrid_1res.json  frequency.json  frequency2.json  hashgrid.json  linear.json  none.json  small.json  tensor.json
configs/sdf/: base.json  frequency.json  oneblob.json  takikawa.json
configs/volume/: base.json
data/image/: LICENSE.txt  albert.exr
data/nerf/fox/: transforms.json
dependencies/NaturalSort/: LICENSE.md  Makefile  README.md  natural_sort_test.cpp
dependencies/cuda-cmake-github-actions/: LICENSE
dependencies/cuda-cmake-github-actions/scripts/actions/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
dependencies/filesystem/: CMakeLists.txt  LICENSE  README.md  path_demo.cpp
dependencies/filesystem/filesystem/: directory.h  fwd.h  path.h  resolver.h
dependencies/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
dependencies/nanovdb/: README.md
dependencies/nanovdb/nanovdb/: NanoVDB.h
dependencies/optix/: optix.h  optix_7_device.h  optix_7_host.h  optix_7_types.h  optix_denoiser_tiling.h  optix_device.h  optix_function_table.h  optix_function_table_definition.h  optix_host.h  optix_micromap.h  optix_stack_size.h  optix_stubs.h  optix_types.h
dependencies/optix/internal/: optix_7_device_impl.h  optix_7_device_impl_exception.h  optix_7_device_impl_transformations.h  optix_micromap_impl.h
dependencies/pybind11_glm/: pybind11_glm.hpp
dependencies/pybind11_json/: LICENSE  pybind11_json.hpp
dependencies/tinyexr/: LICENSE.txt  README.md  test_tinyexr.cc  tinyexr.h
dependencies/tinyexr/jni/: Android.mk  Application.mk  Makefile  README.md
dependencies/tinyobjloader/: CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build.ninja  loader_example.cc  premake4.lua  tiny_obj_loader.cc  tiny_obj_loader.h  tinyobjloader-config.cmake.in  tinyobjloader.pc.in  vcsetup.bat
dependencies/tinyobjloader/python/: LICENSE  MANIFEST.in  Makefile  README.md  bindings.cc  pyproject.toml  sample.py  setup.py  tiny_obj_loader.cc
docs/: CODEOWNERS  index.html  nerf_dataset_tips.md
docs/assets/: mueller2022instant.bib
include/neural-graphics-primitives/: adam_optimizer.h  bounding_box.cuh  camera_path.h  common.h  common_device.cuh  common_host.h  discrete_distribution.h  dlss.h  envmap.cuh  json_binding.h  marching_cubes.h  nerf.h  nerf_device.cuh  nerf_loader.h  nerf_network.h  opengl_utils.h  openxr_hmd.h  pybind11_vec.hpp  random_val.cuh  render_buffer.h  sdf.h  sdf_device.cuh  shared_queue.h  takikawa_encoding.cuh  testbed.h  thread_pool.h  tinyexr_wrapper.h  tinyobj_loader_wrapper.h  trainable_buffer.cuh  triangle.cuh  triangle_bvh.cuh  triangle_octree.cuh  triangle_octree_device.cuh
include/neural-graphics-primitives/fused_kernels/: render_nerf.cuh  trace_sdf.cuh  train_nerf.cuh
include/synerfgine/: camera.h  cuda_helpers.h  display.h  engine.h  file.h  input.h  light.cuh  nerf_world.h  syn_world.h  virtual_object.h
instant_ngp_3dml/: README.md  __init__.py  __main__.py  rendering.py  training.py
instant_ngp_3dml/scripts/: check.sh  publish.sh
instant_ngp_3dml/software/: __main__.py  rendering.py  training.py
instant_ngp_3dml/test/: test_multi_cam_rendering.py
instant_ngp_3dml/utils/: __init__.py  network_config.py  tonemapper.py  training_info.py
ml-space/: Dockerfile  README.md
notebooks/: instant_ngp.ipynb
scripts/: ar2nerf.py  aruco2nerf.py  category2id.json  colmap2nerf.py  common.py  constants.py  convert_image.py  download_colmap.bat  download_ffmpeg.bat  evaluation.py  filter_images_sharpness.py  filter_transforms_sharpness.py  fix_mesh.py  image2bin.py  mask_images.py  masked_from_bbox.py  nerfcapture2nerf.py  nsvf2nerf.py  record3d2nerf.py  render_nerf.py  run.py  save_depth.py  scenes.py  toyota_test.sh  trimesh_fix.py
scripts/flip/: __init__.py  main.py  utils.py
src/: camera_path.cu  common.cu  common_device.cu  common_host.cu  dlss.cu  main.cu  marching_cubes.cu  nerf_loader.cu  opengl_utils.cu  openxr_hmd.cu  python_api.cu  render_buffer.cu  testbed.cu  testbed_image.cu  testbed_nerf.cu  testbed_sdf.cu  testbed_volume.cu  thread_pool.cpp  tinyexr_wrapper.cu  tinyobj_loader_wrapper.cpp  tinyobj_loader_wrapper.cu  triangle_bvh.cu
src/optix/: pathescape.cu  pathescape.h  program.h  raystab.cu  raystab.h  raytrace.cu  raytrace.h
src/synerfgine/: camera.cu  display.cu  engine.cu  nerf_world.cu  syn_world.cu  virtual_object.cu
swn/: __init__.py  metrics.py  read_write_model.py
swn/data/: __init__.py  kitti.py
swn/data/splits/eigen/: test_files.txt
swn/data/splits/eigen_with_gt/: test_files.txt
